<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:id="@+id/menu_group_refresh" >
        <item
            android:id="@+id/option_refresh1"
            android:icon="@drawable/ic_menu_refresh"
            android:showAsAction="ifRoom"
            android:title="@string/option_refresh"/>
    </group>
    <group android:id="@+id/menu_group_0" >
        <item
            android:id="@+id/option_markasread"
            android:title="@string/option_mark_all_as_read"/>
        <item
            android:id="@+id/option_markasunread"
            android:title="@string/option_mark_all_as_unread"/>
    </group>
    <group android:id="@+id/menu_group_1" >
        <item
            android:id="@+id/option_hideread"
            android:checkable="true"
            android:title="@string/option_hideread"/>
        <item
            android:id="@+id/option_deleteread"
            android:title="@string/option_deleteread"/>
        <item
            android:id="@+id/option_deleteallentries"
            android:title="@string/option_deleteallentries"/>
    </group>

</menu>